--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "guid-typescript": "^1.0.7",
     "jquery": "^3.2.1",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
